Fix small spacing issue on leaderboard

--- a/src/partial-styles/_leaderboard.scss
+++ b/src/partial-styles/_leaderboard.scss
@@ -95,7 +95,7 @@
         grid-template-columns: 8.5% 57% 10.1% 10.1% 14.6%;
 
         > div {
-          padding: 15px 0;
+          padding: 16px 0;
           text-align: center;
         }
       }
